<resources>
    <string name="app_name">EcoGreen</string>
    <string name="Create_acc">Create Account</string>
    <string name="name">Name</string>
    <string name="password">Password </string>
    <string name="log_in">Log-in</string>
    <string name="please_enter_the_following_information_to_create_your_account">please enter the following information to create your account</string>
    <string name="change_name">Change Name</string>
    <string name="account_seetings">Account Seetings</string>
    <string name="hyperlink1.1"><a href="https://www.amazon.com/Stasher-Silicone-Reusable-Bag-Sandwich/dp/B01DZQT99I/ref=as_li_ss_il?&amp;linkCode=li3&amp;tag=randj06-20&amp;amplinkId=60145ffe81cdc772625ac7a7729a38c4&amp;language=en_US">Reusable Snack Bags</a></string>
    <string name="hyperlink1.2"><a href="https://www.amazon.com/5-Pack-Glass-Prep-Containers-Compartment/dp/B0777JD5DD/ref=as_li_ss_il?crid=GN6HQRDYLXWJ&amp;dchild=1&amp;keywords=reusable+prep+containers&amp;qid=1595996087&amp;sprefix=Reusable+prep+containers,aps,402&amp;sr=8-26&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=9befed5f36432a9d668a87e79de9c788&amp;language=en_US">Food Storage Containers</a></string>
    <string name="hyperlink1.3"><a href="https://www.amazon.com/Bees-Wrap-Assorted-Sustainable-Alternative/dp/B0126LMDFK/ref=as_li_ss_il?dchild=1&amp;keywords=Bee%E2%80%99s+Wrap&amp;qid=1595996361&amp;s=home-garden&amp;sr=1-1-spons&amp;psc=1&amp;spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyWDVNTkZENFExMFBPJmVuY3J5cHRlZElkPUEwMjQ2OTk1MUZHV1c4VkNGUVJXUiZlbmNyeXB0ZWRBZElkPUExMDAyNzg3MThXTzVISkpIUklCSyZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=1eec343538690e2dd1b75dad4599e1f8&amp;language=en_US">Reusable Beeswax wraps</a></string>
    <string name="hyperlink2.1"><a href="https://www.amazon.com/Better-Life-All-Purpose-Unscented-2409C/dp/B0040MIBBY/ref=as_li_ss_il?crid=98MQURNHF9Z0&amp;dchild=1&amp;keywords=natural+cleaning+products&amp;qid=1595998863&amp;sprefix=natural+cleanin,aps,381&amp;sr=8-2&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=21dd5f97d0526be7c36047aad33ea8c9&amp;language=en_US">Natural Cleaning Products</a></string>
    <string name="hyperlink2.2"><a href="https://www.amazon.com/Wool-Dryer-Balls-Alternative-Softener/dp/B014WOWNAY/ref=as_li_ss_il?crid=226IE79MQUNTP&amp;dchild=1&amp;keywords=eco+friendly+wool+dryer+balls&amp;qid=1596064931&amp;sprefix=eco+friendly+wool,aps,377&amp;sr=8-3&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=5203e779419efb01da58d989e5995549&amp;language=en_US">Reusable Dryer Balls</a></string>
    <string name="hyperlink2.3"><a href="https://www.amazon.com/EcoJeannie-Eco-Friendly-Cleaning-Biodegradable-Cellulose/dp/B071JFTQ4M/ref=as_li_ss_il?dchild=1&amp;keywords=eco+friendly+clothes&amp;qid=1595999073&amp;sr=8-3&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=8a1900e43d7c440b9ebb948e3fad48dd&amp;language=en_US">Biodegradable Cleaning Cloths</a></string>
    <string name="hyperlink3.1"><a href="https://www.amazon.com/KeepCup-Reusable-Toughened-Natural-12-Ounce/dp/B00PC9UZY0/ref=as_li_ss_il?keywords=keep+cup&amp;qid=1559053895&amp;s=gateway&amp;sr=8-3&amp;th=1&amp;psc=1&amp;ascsub&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=e72c0e3d04f0faee6b053f30dc39c9da&amp;language=en_US">Reusable coffee cup</a></string>
    <string name="hyperlink3.2"><a href="https://www.amazon.com/dp/B07YXMJZQW/ref=as_li_ss_il?_encoding=UTF8&amp;psc=1&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=699e0c1e79dbad015ba1e27481d66eaa&amp;language=en_US">Reusable Water Bottle</a></string>
    <string name="hyperlink3.3"><a href="https://www.amazon.com/dp/B072V9XPTR/ref=as_li_ss_il?ie=UTF8&amp;th=1&amp;linkCode=li3&amp;tag=randj06-20&amp;linkId=bd89739457b3b58a53f9d642e7246247&amp;language=en_US">Stainless Steel Water Bottle</a></string>
    <string name="hyperlink.end"><a href="https://www.amazon.com/s?k=eco+friendly+products&amp;crid=1PVU3FQFNMP21&amp;sprefix=eco%2Caps%2C370&amp;ref=nb_sb_ss_ts-doa-p_7_3">See More</a></string>
    <string name="login">Login</string>
    <string name="username">UserName</string>
    <string name="alternatives">Alternatives</string>
    <string name="email">Email</string>
    <string name="activities_bar">Activities</string>
    <string name="sustainable_products_bar">Sustainable products</string>
    <string name="find_market_bar">Find Eco Market</string>
    <string name="personal_page_bar">Personal Page</string>
    <string name="logout_bar">Logout</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">"open Drawer "</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="sustainable_products">Sustainable products</string>
    <string name="eco_friendly_kitchen_products">Eco Friendly Kitchen Products:</string>
    <string name="eco_friendly_cleaning_products">Eco Friendly Cleaning products :</string>
    <string name="eco_friendly_water_bottles_and_coffee_cups">Eco Friendly Water Bottles and Coffee Cups :</string>
    <string name="todo">TODO</string>
    <string name="todo0">TODO</string>
    <string name="activities">Activities</string>
</resources>