<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="5dp"
        android:letterSpacing="0.15"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#2E7706"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:targetApi="lollipop" />
    <view
        android:layout_width="match_parent"
        android:layout_height="5dp"
        class="com.google.android.material.appbar.AppBarLayout"
        android:background="#9C9696"
        android:layout_marginTop="7dp"></view>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="196dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/Username0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="#818181" />

    <EditText
        android:id="@+id/Password0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="#777676"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/Login0"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="40dp"
        android:letterSpacing="0.2"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/log_in"
        android:textSize="16sp"
        app:backgroundTint="#00906b"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/forgotPassword0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="10dp"
        android:text="Forgot Password ?"
        android:textColor="#151414"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="12dp"
        android:text="New Here ?  Create Account"
        android:textColor="#151414"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="20dp"
        android:visibility="invisible" />

</LinearLayout>