<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_login"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".Reg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="608dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginLeft="130dp"
                android:letterSpacing="0.15"
                android:text="Register"
                android:textColor="#2E7706"
                android:textSize="30sp"
                android:textStyle="bold" />

            <view
                android:layout_width="match_parent"
                android:layout_height="3dp"
                class="com.google.android.material.appbar.AppBarLayout"
                android:background="#9C9696"
                android:layout_marginTop="3dp"></view>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/please_enter_the_following_information_to_create_your_account"
                android:textAlignment="center"
                android:textSize="16sp"
                android:gravity="center_horizontal" />

            <EditText
                android:id="@+id/NameOfUser"
                android:layout_width="366dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:hint="@string/name"
                android:padding="15dp"
                android:textColorHint="#191818"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Age"
                android:layout_width="366dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:hint="Age"
                android:inputType="datetime"
                android:padding="15dp"
                android:textColorHint="#1E1D1D"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="366dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:hint="Email Address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#171616"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/PhoneNo"
                android:layout_width="366dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:hint="Phone Number"
                android:inputType="phone"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#131313"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="366dp"
                android:layout_height="48dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="#000000"
                android:textColorHint="#1C1B1B"
                android:textSize="15sp" />

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:text="@string/Create_acc"
                android:background="@drawable/btn_main"
                app:backgroundTint="#00906b" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>