<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login2"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:letterSpacing="0.15"
                android:text="@string/account_seetings"
                android:textAllCaps="false"
                android:textColor="#2E7706"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:targetApi="lollipop" />
            <view
                android:layout_width="match_parent"
                android:layout_height="5dp"
                class="com.google.android.material.appbar.AppBarLayout"
                android:background="#9C9696"
                android:layout_marginTop="7dp"></view>
        </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/change_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#151515"
        android:textColorHint="#050505"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="Email"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="Change Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#191818"
        android:textColorHint="#131313"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="Phone Number"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ChangePhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="Change Phone Number"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#131313"
        android:textColorHint="#1E1D1D"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/Save_acc_set"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginLeft="220dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="#199710"
        android:text="Save"
        app:backgroundTint="#00906b" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="225dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgFindS"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/map"
            tools:ignore="VectorDrawableCompat,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgSuss"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="-7dp"
            android:layout_marginLeft="-7dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sus"
            tools:ignore="VectorDrawableCompat,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgActs"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="-7dp"
            android:layout_marginLeft="-7dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/bicycle0"
            tools:ignore="VectorDrawableCompat,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imgPers"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_marginStart="-7dp"
            android:layout_marginLeft="-7dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo0"
            app:srcCompat="@drawable/header"
            tools:ignore="VectorDrawableCompat,SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>
</LinearLayout>

